[Backend] 1. Group -> Device 리스트를 셋으로 변경